# proficrm

./: .dockerignore  .gitattributes  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  CHANGELOG_DEPLOY.md  CLAUDE.md  CODE_REVIEW_REPORT.md  CODE_REVIEW_SECURITY.md  DAILY_REPORT_2026-01-12.md  DELETE_AMOMAIL_NOTES.md  DEPLOYMENT_CHECKLIST.md  DEPLOY_AND_TEST.md  DEPLOY_CRM_FIXES.md  DEPLOY_ERROR_LOG.md  DEPLOY_INSTRUCTIONS.md  DEPLOY_PRODUCTION.txt  DEPLOY_SECURITY_FIX.md  DEPLOY_WORKFLOW.md  DOCKER_COMMANDS.md  Dockerfile.staging  FIXES_SUMMARY.md  FIX_CORS_WARNING.md  FIX_SECURITY_EMAIL_DOCKER.md  FIX_WARNINGS.md  MAILER_ALERTING_AND_FIXES_REPORT.md  MAILER_ALERTING_PLAN.md  MAILER_AUDIT_FIXES_REPORT.md  MAILER_AUDIT_REPORT.md  MAILER_ENTERPRISE_AUDIT.md  MAILER_ENTERPRISE_FINAL_REPORT.md  MAILER_ENTERPRISE_FINISHING_REPORT.md  MAILER_FIXES_REPORT.md  MAILER_HARDENING_AUDIT.md  MAILER_OBSERVABILITY_PACK.md  MAILER_ONCALL_PLAYBOOK.md  MAILER_TESTING_CHECKLIST.md  MODERN_FEATURES.md  (+53 more)
.claude/: settings.json
.claude/hooks/: block-prod.py  check-secrets.py  ruff-fix.py  template-reminder.py
.github/workflows/: ci.yml  deploy-staging.yml  messenger-ci.yml
android/CRMProfiDialer/: DIAGNOSTICS_GUIDE.md  NEXT_STEPS.md  PRE_PROD_CHECKLIST.md  RELEASE.md  build.gradle  gradle.properties  local.properties  settings.gradle
backend/: CHANGELOG.md  README_messenger.md  _compile_templates.py  env.example  requirements-dev.txt  requirements.txt  tests_w2_1_5_codification.py
backend/accounts/: admin.py  apps.py  jwt_views.py  middleware.py  middleware_2fa.py  models.py  models_region.py  permissions.py  scope.py  security.py  signals.py  tests.py  tests_2fa.py  tests_branch_region.py  tests_magic_link.py  tests_signals.py  tests_templatetags.py  tests_tenderist.py  tests_w2_6_jwt.py  views.py  views_2fa.py
backend/amocrm/: __init__.py  client.py  migrate.py  tests.py  tests_client.py
backend/audit/: admin.py  apps.py  models.py  service.py  tasks.py  tests_retention.py  tests_w3_2.py  views.py
backend/companies/: SEARCH_BEST_PRACTICES.md  admin.py  api.py  apps.py  decorators.py  importer.py  inn_utils.py  models.py  normalizers.py  permissions.py  policy.py  region_utils.py  search_index.py  search_service.py  services.py  signals.py  tasks.py  tests.py  tests_api.py  tests_delete_service.py  tests_phone_email_services.py  tests_search.py  tests_services.py  tests_transfer.py  tests_ux_1_timeline.py  views.py
backend/core/: __init__.py  api.py  apps.py  celery_signals.py  crypto.py  csp_report.py  exceptions.py  feature_flags.py  input_cleaners.py  json_formatter.py  permissions.py  request_id.py  sentry_context.py  test_runner.py  test_utils.py  tests.py  tests_csp.py  tests_feature_flags.py  tests_sentry_context.py  timezone_utils.py  work_schedule_utils.py
backend/crm/: asgi.py  celery.py  context_processors.py  exceptions.py  health.py  json_formatter.py  middleware.py  request_id_middleware.py  settings.py  settings_test.py  test_runner.py  tests_metrics.py  urls.py  utils.py  views.py
backend/docs/: CHATWOOT_COMPARISON.md  CHATWOOT_FULL_ANALYSIS.md  CHATWOOT_REFERENCE.md  CHATWOOT_STUDY_COMPLETE.md  CHATWOOT_STUDY_PLAN.md  CODE_REVIEW_MESSENGER_UI.md  INN_AUDIT.md  MESSENGER_CHATWOOT_COMPARISON.md  MESSENGER_CHATWOOT_UPGRADE_PLAN.md  MESSENGER_IMPROVEMENT_SUMMARY.md  MESSENGER_LIVE_CHAT_REFACTOR_PLAN.md  MESSENGER_PRODUCTION_PLAN.md  MESSENGER_ROADMAP.md  MESSENGER_UI_CHATWOOT_STYLE.md  MESSENGER_WIDGET_INTEGRATION.md  PHASE_COMPLETION_REPORT.md
backend/mailer/: admin.py  apps.py  constants.py  crypto.py  forms.py  logging_utils.py  mail_content.py  models.py  smtp_bz_api.py  smtp_sender.py  tasks.py  tests.py  tests_smtp_sender.py  tests_views.py  throttle.py  urls.py  utils.py  views.py
backend/messenger/: admin.py  api.py  apps.py  automation.py  company_autolink.py  consumers.py  context_processors.py  dispatchers.py  geoip.py  integrations.py  logging_utils.py  models.py  online_status.py  push.py  reporting.py  routing.py  selectors.py  serializers.py  services.py  signals.py  tasks.py  throttles.py  typing.py  urls.py  utils.py  views.py  widget_api.py  ws_notify.py
backend/notifications/: admin.py  apps.py  (+7 more)
config/: logrotate-nginx-proficrm.conf
docker/: entrypoint.sh
docs/: ACCESS_POLICY_REGRESSION_CHECKLIST.md  ACCESS_POLICY_RESEARCH_REPORT.md  AMOCRM_MIGRATE_VERIFICATION.md  AMOCRM_MIGRATION_OPTIMIZATION.md  AMO_IMPORT_LOGS.md  AMO_IMPORT_OPTIMIZATION.md  ANDROID_CALL_RELIABILITY_RECOMMENDATIONS.md  API_OPTIMIZATION_ANALYSIS.md  CALL_ANALYTICS_INVENTORY.md  CALL_EVENT_CONTRACT.md  COMPANY_TRANSFER_RULES.md  CONTACT_FETCHING_OPTIONS.md  CONTACT_IMPORT_OPTIMIZATION.md  CONTACT_IMPORT_PERFORMANCE.md  CRITICAL_SECURITY_FIXES.md  DASHBOARD_IMPROVEMENTS.md  DASHBOARD_UX_ANALYSIS.md  DEPLOY_AUDIT_ANDROID.md  DEPLOY_AUDIT_REPORT.md  DEPLOY_ERROR_PAGES.md  DEPLOY_INSTRUCTIONS.md  DEPLOY_SEARCH.md  DEPLOY_STAGING_COMMANDS.md  DESIGN.md  EARLY_STOP_EXPLAINED.md  EARLY_STOP_LOGIC.md  EARLY_STOP_SIMPLE.md  FINAL_COMPLETION_REPORT.md  HOSTING_RECOMMENDATIONS.md  INTELLIGENT_SEARCH_SPEC.md  MAGIC_LINK_AUTH.md  MAIL_REGRESSION_CHECKLIST.md  NOTIFICATIONS_SYSTEM.md  OPTIMIZATION_4GB_RAM.md  PMI_livechat.md  PROJECT_ARCHITECTURE.md  QUICK_DEPLOY_STAGING.md  README.md  README_DEPLOY.md  RELEASE_GATE_CALL_ANALYTICS.md  (+29 more)
e2e/: README.md  messenger-widget.spec.js  package.json  playwright.config.ts
nginx/: production.conf  staging.conf
scripts/: audit_policy_coverage.py  backup_postgres.sh  backup_postgres_staging.sh  cleanup_for_prod.sh  cleanup_for_staging.sh  configure_sparse_checkout.sh  glitchtip-backup.sh  glitchtip-bootstrap.sh  glitchtip-env-template.conf  health_alert.sh  health_check.sh  kuma-bootstrap.py  log_alert.sh  mypy_ratchet.py  nginx_hsts_apply.sh  promote_to_prod.sh  restore_postgres_test.sh  restore_prod_db_to_staging.sh  run_tests_docker.bat  run_tests_docker.sh  setup_staging_env.py  setup_staging_env.sh  smoke_check.sh  test.sh  verify_sentry_real_traffic.py  walg-backup-host.sh  walg-push-from-spool.sh
(+912 files in other folders)
