# pyproject.toml — конфиг dev-инструментов проекта.
# Само приложение CRM ПРОФИ не пакетируется (Django-проект, запускается
# как скрипт через manage.py), поэтому секции [project] / [build-system]
# отсутствуют — здесь только настройки линтеров и форматтеров.

[tool.black]
# Wave 0.2 (2026-04-20): стандартизируем форматирование.
# line-length=100 — компромисс между «узко для review» и «читаемо в IDE».
# Запуск: `black backend/` или через pre-commit.
line-length = 100
target-version = ["py313"]
extend-exclude = '''
/(
    migrations
  | staticfiles
  | \.venv
  | graphify-out
  | knowledge-base
)/
'''
# НЕ трогаем:
# - migrations/ (Django-autogen код, стабильность > красота)
# - staticfiles/ (скомпилированный output)
# - graphify-out/ и knowledge-base/ (локальные инструменты, не исходники)

[tool.ruff]
# Длиннее дефолта — совместимо с black (line-length=100 в black; ruff чуть
# шире для не-форматируемых файлов типа миграций).
line-length = 120
target-version = "py313"
extend-exclude = [
    "backend/*/migrations",
    "backend/staticfiles",
    "backend/media",
    ".venv",
    "graphify-out",
    "knowledge-base",
]

[tool.ruff.lint]
# Wave 0.2 (2026-04-20): расширенный набор правил.
# Каждая группа — реальные баги/security/стиль, не бессмысленная перестановка.
#
# F   — pyflakes: undefined names, unused imports/variables
# E9  — синтаксические ошибки и IOError
# W6  — устаревшие конструкции, опечатки
# B   — flake8-bugbear: реальные антипаттерны (mutable default args)
# I   — isort: сортировка импортов (автофикс безопасен)
# N   — pep8-naming: конвенции имён (классы PascalCase, функции snake_case)
# UP  — pyupgrade: современный Python-синтаксис (dict union, match-case)
# S   — flake8-bandit: security (hardcoded passwords, shell=True, eval)
# DJ  — flake8-django: Django-специфичные антипаттерны
# RUF — ruff-native: unused noqa, unnecessary iter
select = ["F", "E9", "W6", "B", "I", "N", "UP", "S", "DJ", "RUF"]

ignore = [
    # --- Pre-W0.2 исключения (оставляем) ---
    "F401",   # unused-import — законно в __init__.py для re-export shim'ов
    "F403",   # star-imports — используется в settings.py проекта
    "F405",   # undefined-via-star — следствие F403
    "F841",   # unused-variable — иногда для читаемости (_ = result)
    "B008",   # function-call-in-default-argument — конфликтует с Django (Q(), timezone.now)
    "B904",   # raise-without-from-inside-except — много мест, не критично
    # --- Wave 0.2 добавления (после реальной проверки на кодовой базе) ---
    "S101",   # assert-used — в тестах норма, а prod-код и так не использует
    "S105",   # hardcoded-password-string — ложные срабатывания на password="..." в тестах
    "S106",   # hardcoded-password-funcargs — то же
    "S107",   # hardcoded-password-default — то же
    "S311",   # suspicious-non-cryptographic-random — random.choice() не для токенов (для токенов secrets)
    "S308",   # suspicious-mark-safe — mark_safe на константах (не user input)
    "N806",   # non-lowercase-variable — Django ORM: `User = get_user_model()`
    "N815",   # mixed-case-variable — конфликт с JSON полями (camelCase из API)
    "N818",   # exception-name-should-end-in-Error — исторические имена
    "UP007",  # PEP 604 union (X | Y) — в Django полях лучше Optional[X]
    "UP035",  # import-replacement typing — мы используем и typing, и collections.abc
    "RUF001", # ambiguous-unicode в строках — русский текст триггерит ложно
    "RUF002", # то же для docstrings
    "RUF003", # то же для comments
    "RUF012", # mutable-class-default — Django `Meta.indexes = [...]` классический паттерн
]

[tool.ruff.lint.isort]
# Порядок: stdlib → django → third-party → first-party → local
known-first-party = [
    "accounts", "companies", "tasksapp", "ui", "audit", "mailer",
    "notifications", "phonebridge", "amocrm", "policy", "messenger", "core", "crm",
]
known-third-party = ["django", "rest_framework", "celery", "channels"]
section-order = [
    "future", "standard-library", "third-party", "first-party", "local-folder",
]

[tool.ruff.lint.per-file-ignores]
# Миграции — автогенерируемый код Django, не трогаем полностью.
"**/migrations/*.py" = ["F", "E", "W", "B", "I", "N", "UP", "S", "DJ", "RUF"]
# Настройки проекта используют `from .base import *` паттерн.
"backend/crm/settings*.py" = ["F403", "F405", "N806", "S105"]
# Тесты — разрешаем assert, мутабельные дефолты, hardcoded-like passwords.
"**/tests*.py" = ["B", "S101", "S105", "S106", "S107", "N802", "N803", "N806"]
"**/test_*.py" = ["B", "S101", "S105", "S106", "S107", "N802", "N803", "N806"]
# conftest — то же что тесты
"**/conftest.py" = ["B", "S101", "F401"]
# management commands — часто большие и простые, короткие функции с нетипичными
# именами разрешаем
"**/management/commands/*.py" = ["S603", "S607"]  # subprocess call is OK here

# -----------------------------------------------------------------------------
# Coverage (Wave 0.1 baseline: 51% → fail_under=50 с запасом −2%).
# Траектория +5% за волну (план docs/plan/00_MASTER_PLAN.md §«Coverage gating»):
#   W0: 50 (baseline −2%)
#   W1: 55   W2: 60   W3: 65   W4: 70
#   W5: 72   W6: 75   W7: 77   W8: 78   W9: 78 (UX)
#   W10-W14: +2% за волну   финал: 85
# -----------------------------------------------------------------------------
[tool.coverage.run]
source = ["backend"]
omit = [
    "*/migrations/*",
    "*/tests*.py",
    "*/test_*.py",
    "*/conftest*.py",
    "manage.py",
    "backend/crm/asgi.py",
    "backend/crm/wsgi.py",
    "backend/staticfiles/*",
    "backend/media/*",
]

[tool.coverage.report]
fail_under = 50   # W0 baseline (было 51%, запас -2%)
skip_empty = true
show_missing = false
precision = 1
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]

[tool.coverage.html]
directory = "docs/audit/coverage-baseline-html"

[tool.coverage.xml]
output = "docs/audit/coverage-baseline.xml"
