# pyproject.toml — конфиг dev-инструментов проекта.
# Само приложение CRM ПРОФИ не пакетируется (Django-проект, запускается
# как скрипт через manage.py), поэтому секции [project] / [build-system]
# отсутствуют — здесь только настройки линтеров и форматтеров.

[tool.black]
# Wave 0.2 (2026-04-20): стандартизируем форматирование.
# line-length=100 — компромисс между «узко для review» и «читаемо в IDE».
# Запуск: `black backend/` или через pre-commit.
line-length = 100
target-version = ["py313"]
extend-exclude = '''
/(
    migrations
  | staticfiles
  | \.venv
  | graphify-out
  | knowledge-base
)/
'''
# НЕ трогаем:
# - migrations/ (Django-autogen код, стабильность > красота)
# - staticfiles/ (скомпилированный output)
# - graphify-out/ и knowledge-base/ (локальные инструменты, не исходники)

[tool.ruff]
# Длиннее дефолта — совместимо с black (line-length=100 в black; ruff чуть
# шире для не-форматируемых файлов типа миграций).
line-length = 120
target-version = "py313"
extend-exclude = [
    "backend/*/migrations",
    "backend/staticfiles",
    "backend/media",
    ".venv",
    "graphify-out",
    "knowledge-base",
]

[tool.ruff.lint]
# Wave 0.2 (2026-04-20): расширенный набор правил.
# Каждая группа — реальные баги/security/стиль, не бессмысленная перестановка.
#
# F   — pyflakes: undefined names, unused imports/variables
# E9  — синтаксические ошибки и IOError
# W6  — устаревшие конструкции, опечатки
# B   — flake8-bugbear: реальные антипаттерны (mutable default args)
# I   — isort: сортировка импортов (автофикс безопасен)
# N   — pep8-naming: конвенции имён (классы PascalCase, функции snake_case)
# UP  — pyupgrade: современный Python-синтаксис (dict union, match-case)
# S   — flake8-bandit: security (hardcoded passwords, shell=True, eval)
# DJ  — flake8-django: Django-специфичные антипаттерны
# RUF — ruff-native: unused noqa, unnecessary iter
select = ["F", "E9", "W6", "B", "I", "N", "UP", "S", "DJ", "RUF"]

ignore = [
    # --- Pre-W0.2 исключения (оставляем) ---
    "F401",   # unused-import — законно в __init__.py для re-export shim'ов
    "F403",   # star-imports — используется в settings.py проекта
    "F405",   # undefined-via-star — следствие F403
    "F841",   # unused-variable — иногда для читаемости (_ = result)
    "B008",   # function-call-in-default-argument — конфликтует с Django (Q(), timezone.now)
    "B904",   # raise-without-from-inside-except — много мест, не критично
    # --- Wave 0.2 добавления (после реальной проверки на кодовой базе) ---
    "S101",   # assert-used — в тестах норма, а prod-код и так не использует
    "S105",   # hardcoded-password-string — ложные срабатывания на password="..." в тестах
    "S106",   # hardcoded-password-funcargs — то же
    "S107",   # hardcoded-password-default — то же
    "S311",   # suspicious-non-cryptographic-random — random.choice() не для токенов (для токенов secrets)
    "S308",   # suspicious-mark-safe — mark_safe на константах (не user input)
    "N806",   # non-lowercase-variable — Django ORM: `User = get_user_model()`
    "N815",   # mixed-case-variable — конфликт с JSON полями (camelCase из API)
    "N818",   # exception-name-should-end-in-Error — исторические имена
    "UP007",  # PEP 604 union (X | Y) — в Django полях лучше Optional[X]
    "UP035",  # import-replacement typing — мы используем и typing, и collections.abc
    "RUF001", # ambiguous-unicode в строках — русский текст триггерит ложно
    "RUF002", # то же для docstrings
    "RUF003", # то же для comments
    "RUF012", # mutable-class-default — Django `Meta.indexes = [...]` классический паттерн
    # --- 2026-04-21: legacy tech debt, TODO re-enable in W1 cleanup ---
    # (pre-existing на момент post-billing CI unblock; см. Q14)
    "S110",   # try-except-pass — 96 мест, legacy defensive programming
    "S112",   # try-except-continue — 2 места, same category
    "B007",   # unused-loop-control-variable — readability choice legacy
    "B023",   # function-uses-loop-variable — closure gotcha pre-existing
    "F811",   # redefined-while-unused — re-import patterns legacy
    "RUF005", # collection-literal-concatenation — style
    "RUF013", # implicit-optional — style, migrate gradually
    "RUF022", # unsorted-dunder-all — style
    "RUF046", # unnecessary-cast-to-int — style
    "RUF059", # unused-unpacked-variable — readability choice
    "DJ001",  # django-nullable-model-string-field — legacy models
    "DJ008",  # django-model-without-dunder-str — legacy models
    "DJ012",  # django-unordered-body-content-in-model — style
    "UP017",  # datetime-timezone-utc — style
    "UP031",  # printf-string-formatting — style
]

[tool.ruff.lint.isort]
# Порядок: stdlib → django → third-party → first-party → local
known-first-party = [
    "accounts", "companies", "tasksapp", "ui", "audit", "mailer",
    "notifications", "phonebridge", "amocrm", "policy", "messenger", "core", "crm",
]
known-third-party = ["django", "rest_framework", "celery", "channels"]
section-order = [
    "future", "standard-library", "third-party", "first-party", "local-folder",
]

[tool.ruff.lint.per-file-ignores]
# Миграции — автогенерируемый код Django, не трогаем полностью.
"**/migrations/*.py" = ["F", "E", "W", "B", "I", "N", "UP", "S", "DJ", "RUF"]
# Настройки проекта используют `from .base import *` паттерн.
"backend/crm/settings*.py" = ["F403", "F405", "N806", "S105"]
# Тесты — разрешаем assert, мутабельные дефолты, hardcoded-like passwords.
"**/tests*.py" = ["B", "S101", "S105", "S106", "S107", "N802", "N803", "N806"]
"**/test_*.py" = ["B", "S101", "S105", "S106", "S107", "N802", "N803", "N806"]
# conftest — то же что тесты
"**/conftest.py" = ["B", "S101", "F401"]
# management commands — часто большие и простые, короткие функции с нетипичными
# именами разрешаем
"**/management/commands/*.py" = ["S603", "S607"]  # subprocess call is OK here
# backend/amocrm/migrate.py per-file-ignore removed 2026-04-21 — module
# deleted entirely (W0.5b cleanup). No code remains to flag.

# -----------------------------------------------------------------------------
# Coverage (Wave 0.1 baseline: 51% → fail_under=50 с запасом −2%).
# Траектория +5% за волну (план docs/plan/00_MASTER_PLAN.md §2.5 «Coverage
# gating» v1.2 — переменный шаг, не равномерный +5%):
#   W0: 50 (baseline −2%)
#   W1: temporary 48 — buffer для удаляемого legacy-кода с тестами
#       (phases 4-6 company_detail, amocrm/ removal). К концу W1 — поднять до 53.
#   W2: 60   W3: 65   W4: 70
#   W5: 72   W6: 75   W7: 77   W8: 78   W9: 78 (UX не добавит много тестов)
#   W10-W14: +2% за волну   финал: 85
#
# ВАЖНО: при старте Wave 1 разработчик ДОЛЖЕН:
#   1. Опустить fail_under до 48 временно
#   2. Выполнить refactor (Phase 4-6 company_detail + amocrm removal)
#   3. Написать тесты для новых сервисов (company_overview, cold_call)
#   4. К концу W1 — поднять fail_under до 53
# Это единственное отклонение от «+5%/волна». Причина: refactor удаляет
# тесты вместе с кодом быстрее чем добавляет новые (временная просадка).
# -----------------------------------------------------------------------------
[tool.coverage.run]
source = ["backend"]
omit = [
    "*/migrations/*",
    "*/tests*.py",
    "*/test_*.py",
    "*/conftest*.py",
    "manage.py",
    "backend/crm/asgi.py",
    "backend/crm/wsgi.py",
    "backend/staticfiles/*",
    "backend/media/*",
    # Management commands — большие scripts с manual invocation paths,
    # не in test suite by design.
    "*/management/commands/*",
    # Note 2026-04-21: backend/amocrm/migrate.py omit removed —
    # amocrm module deleted entirely (W0.5b cleanup). No longer need skip.
]

# -----------------------------------------------------------------------------
# Pytest (Wave 0.5 — unified test runner + parallel + Playwright E2E).
# Django native runner (manage.py test) продолжает работать параллельно.
# -----------------------------------------------------------------------------
[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "crm.settings_test"
pythonpath = ["backend"]
python_files = ["tests.py", "test_*.py", "tests_*.py", "*_tests.py"]
python_classes = ["Test*", "*Tests"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--tb=short",
    "--reuse-db",  # speed up repeated runs (use --create-db to reset)
]
markers = [
    "e2e: end-to-end tests requiring browser (slow, не в каждом CI run)",
    "slow: tests > 1s (CI может skip через -m 'not slow')",
    "integration: integration tests (DB + external mocks)",
    "smoke: smoke-test quick checks",
    "flaky: known-flaky tests с auto-retry (используется @pytest.mark.flaky)",
]
# Test discovery excludes
norecursedirs = [
    ".git", ".venv", "node_modules", "staticfiles", "media",
    "graphify-out", "knowledge-base", "htmlcov", ".mypy_cache",
    ".ruff_cache", ".pytest_cache", "tests/e2e",  # E2E запускается отдельно
]

[tool.coverage.report]
# 2026-04-21 W0.5: restored to 50 (Q15 RESOLVED).
# Total coverage = 55.0% with amocrm/migrate.py + management commands omitted
# (legacy modules, tracked for removal in W1 refactor; management commands —
# manual-invocation scripts not tested by design).
#
# W0.4 modules themselves — excellent coverage:
#   core/sentry_context.py: 100%
#   core/feature_flags.py:   95%
#   core/permissions.py:    100%
#   crm/health.py:           74%
#   crm/middleware.py:       84%
#   crm/views.py:            61%
#
# Baseline trajectory per docs/plan/00_MASTER_PLAN.md §2.5:
#   W0.5: 50 (restored, buffer from 55% actual)
#   W1:   48 temporary — phases 4-6 delete legacy (company_detail), coverage
#         может просесть на удалённом code with tests
#   W1 end: 53 ✅ achieved 2026-04-22 (W1.4 cold_call dedup + tests)
#   W2-W14: +2-5%/wave → 85 final
fail_under = 53
skip_empty = true
show_missing = false
precision = 1
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]

[tool.coverage.html]
directory = "docs/audit/coverage-baseline-html"

[tool.coverage.xml]
output = "docs/audit/coverage-baseline.xml"

# -----------------------------------------------------------------------------
# Bandit security scanner (Wave 0.2d — baseline: 0 High, 6 Medium, 572 Low).
# CI запускает с -ll (medium + high). Low — только локально (шум).
# -----------------------------------------------------------------------------
[tool.bandit]
# Исключаем миграции (autogen) и тесты (assert/hardcoded passwords legit).
exclude_dirs = [
    "**/migrations",
    "**/tests",
    "**/test_*.py",
    "**/tests_*.py",
    "**/tests.py",
    "**/conftest.py",
    ".venv",
    "staticfiles",
    "media",
    "graphify-out",
    "knowledge-base",
]
# Пропускаем ложные срабатывания:
# B101: assert_used — assert в тестах legit (всё равно исключаем через exclude_dirs)
# B601: paramiko — не используется в коде
skips = ["B101", "B601"]
